fixes word wrap for tag list

--- a/app/assets/stylesheets/components/profile.css.scss
+++ b/app/assets/stylesheets/components/profile.css.scss
@@ -55,6 +55,7 @@
     margin: 10px;
     margin-right: 0;
     text-align: right;
+    word-wrap: break-word;
 
     a {
       color: $article-background-color;
